--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,5 +1,6 @@
-<div>
-    <h2>welcome to the hotle reservation portal!</h2>
-    <button [routerLink]="['/new']">Create a new reservation</button>
-    <button [routerLink]="['/list']">View all reservations</button>
+<div class="text-center my-5">
+    <h2 class="mt-5 mb-3">welcome to the hotle reservation portal!</h2>
+    <hr>
+    <button class="btn btn-primary mx-2"[routerLink]="['/new']">Create a new reservation</button>
+    <button class="btn btn-primary mx-2"[routerLink]="['/list']">View all reservations</button>
 </div>
